--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@omarty13/enum-js",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "description": "enum-js implements the data type whose set of values is a limited list of identifiers.",
-  "main": "index.js",
+  "main": "index.mjs",
   "scripts": {
     "test": "node test-readme.js"
   },
